--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,27 @@
 spring:
   application:
     name: bi-krcc-migration
-  profiles:
-    active: mysql
----
-spring:
-  config:
-    activate:
-      on-profile: mysql
+
   datasource:
-    hikari:
-      jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
-      username: batch
-      password: batchbye
-      driver-class-name: com.mysql.cj.jdbc.Driver
-  batch:
-    jdbc:
-      initialize-schema: always
-#      table-prefix: SYSTEM_
-    job:
-      name: ${job.name:NONE}
-      enabled: true
+    url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
+    username: batch
+    password: batchbye
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#---
+#spring:
+#  config:
+#    activate:
+#      on-profile: mysql
+#  datasource:
+#    hikari:
+#      jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
+#      username: batch
+#      password: batchbye
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#  batch:
+#    jdbc:
+#      initialize-schema: always
+##      table-prefix: SYSTEM_
+#    job:
+#      name: ${job.name:NONE}
+#      enabled: true
