--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,16 @@ spring:
     username: batch
     password: batchbye
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update # 개발 중: update, 운영 환경: validate 또는 none
+    show-sql: true
+    properties:
+      hibernate.jdbc.lob.non_contextual_creation: true
+      hibernate:
+        format_sql: true
+
 #---
 #spring:
 #  config:
