--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: bi-krcc-migration
 
   datasource:
-    url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
+    jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
     username: batch
     password: batchbye
     driver-class-name: com.mysql.cj.jdbc.Driver
