[feat] batch-final

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,27 +17,22 @@ spring:
       hibernate:
         format_sql: true
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
 datasource:
   from:
-    jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration_test?useUnicode=true&characterEncoding=utf8
+    jdbc-url: jdbc:mysql://localhost:3307/bi_krcc_migration_test?useUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: test
     password: 1234
-#---
-#spring:
-#  config:
-#    activate:
-#      on-profile: mysql
-#  datasource:
-#    hikari:
-#      jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration?useUnicode=true&characterEncoding=utf8
-#      username: batch
-#      password: batchbye
-#      driver-class-name: com.mysql.cj.jdbc.Driver
-#  batch:
-#    jdbc:
-#      initialize-schema: always
-##      table-prefix: SYSTEM_
-#    job:
-#      name: ${job.name:NONE}
-#      enabled: true
+
+#datasource: tibero로 변경 필요
+#  from:
+#    jdbc-url: jdbc:mysql://localhost:3306/bi_krcc_migration_test?useUnicode=true&characterEncoding=utf8
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: 1234
+#
